Address PR feedback: - Added flex-wraps to fix mobile views - Fixed date parsing (I only needed the range times, so I removed some of the extraneous stuff) - Changed default pageSize to 5 - Removed the 'resetForm' button in edit event - Changed the backgrounds for row/card views to be more visually appealing

--- a/src/components/admin/event/ManageEventCard/style.module.scss
+++ b/src/components/admin/event/ManageEventCard/style.module.scss
@@ -1,7 +1,7 @@
 .cardEvent {
   align-items: center;
+  background-color: var(--theme-surface-1);
   border-radius: 8px;
-  box-shadow: 0 0 4px var(--theme-primary-4);
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -36,19 +36,24 @@
 
 .rowEvent {
   align-items: center;
-  border: 1px solid var(--theme-primary-4);
+  background-color: var(--theme-surface-1);
   border-radius: 8px;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 1rem;
   justify-content: space-between;
-  margin-bottom: -1px;
   padding: 1rem;
+
+  &:nth-child(2n) {
+    background-color: var(--theme-background);
+  }
 
   .eventInfo {
     align-items: center;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     gap: 1rem;
 
     .eventText {
