--- a/src/components/admin/event/ManageEventControls/style.module.scss
+++ b/src/components/admin/event/ManageEventControls/style.module.scss
@@ -2,6 +2,7 @@
   align-items: center;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 1rem;
 
   .theme {
